src/tui/snapshots/ciphey__tui__screens__tests__input_that_is_already_plaintext.snap
---
source: src/tui/screens.rs
expression: "screen(&lines, 80)"
---
"✓ Your input is already plaintext                                               "
"                                                                                "
"  Hello, World!                                                                 "
"                                                                                "
"  Found by  English checker · looks like English · you said yes                 "
