src/tui/snapshots/ciphey__tui__screens__tests__long_paths_keep_their_last_decoders.snap
---
source: src/tui/screens.rs
expression: "screen(&lines, 40)"
---
"▄ Searching  1.3 s of 5 s  ━━━───────── "
"  Trying    … → Base64 → Base64         "
"  Explored  1,204 texts · 3 layers deep "
"  q stop · ? help                       "
