src/tui/snapshots/ciphey__tui__screens__tests__prompt_for_a_candidate.snap
---
source: src/tui/screens.rs
expression: "screen(&lines, 80)"
---
"? Is this the plaintext? · timer paused                                         "
"                                                                                "
"  Ciphey is very fast                                                           "
"                                                                                "
"  Found by  English checker · looks like English                                "
"  y yes · n no, keep looking · q stop                                           "
