src/tui/snapshots/ciphey__tui__screens__tests__saved_to_a_file_shows_the_whole_path.snap
---
source: src/tui/screens.rs
expression: "screen(&lines, 40)"
---
"✓ Plaintext found in 0.11 s             "
"                                        "
"  Saved to  /home/someone/a/rather/long/"
"home/directory/ciphey_text-2.txt        "
"                                        "
"  Decoded   Base64                      "
"  Found by  English checker · looks     "
"            like English                "
"  Searched  1,204 texts, up to 3 layers "
"            deep                        "
