src/tui/snapshots/ciphey__tui__screens__tests__searching_at_80_columns.snap
---
source: src/tui/screens.rs
expression: "screen(&lines, 80)"
---
"▄ Searching  1.3 s of 5 s  ━━━━━━━━────────────────────────                     "
"  Trying    Base64 → Hexadecimal                                                "
"  Explored  1,204 texts · 3 layers deep                                         "
"  q stop · ? help                                                               "
